--- a/style.css
+++ b/style.css
@@ -212,7 +212,10 @@ footer {
     background: #222;
     margin-top: 30px;
 }
-
+.hero {
+    background-attachment: fixed;
+    }
+   
 /* Responsif */
 @media (max-width: 768px) {
     .menu-toggle {
