--- a/style.css
+++ b/style.css
@@ -171,7 +171,33 @@ header h1 {
 .btn:hover {
     background: gray;
 }
+/* Menu Section */
+.menu {
+    text-align: center;
+    padding: 60px 20px;
+}
 
+.menu-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.menu-card {
+    background: #222;
+    padding: 20px;
+    width: 250px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: transform 0.3s ease, background 0.3s ease;
+}
+
+.menu-card:hover {
+    transform: translateY(-10px);
+    background: #444;
+    }
+        
 /* Features Section */
 .features {
     text-align: center;
